# Browspi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
mermaid/: detail.mmd  flow.mmd  general.mmd
scripts/: format_all.py
src/browspi/: main.py  utils.py
src/browspi/dom/: service.py  views.py
src/browspi/dom/clickable_element_processor/: service.py
src/browspi/dom/history_tree_processor/: service.py  view.py
src/browspi/dom_utils/: dom_definitions.py  service.py
src/browspi/init_agent/: find_and_apply_to_jobs.py  linkedin_job_apply.py  news.py
src/browspi/services/: generatePageMap.js  views.py
src/browspi/services/browser/: service.py
src/browspi/services/clickable_element_processor/: service.py
src/browspi/services/dom/: service.py
src/browspi/services/dom_change_tracker/: service.py  view.py
src/browspi/services/history_tree_processor/: service.py
src/browspi/services/ui_element_handler/: service.py
src/browspi/ui/: app.py  browser_utils.py  evaluate_ui.py  llm_utils.py  manager.py  news_app_ui.py
src/browspi/ui/use_cases/: linkedin_apply.py
