[project]
name = "browspi"
version = "0.1.0"
description = ""
authors = [
    {name = "trunkey2003",email = "21521049@gm.uit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "markdownify (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "browspi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
browspi = "src.browspi.main:__main__"
