[project]
name = "browspi"
version = "0.1.0"
description = ""
authors = [
    {name = "trunkey2003",email = "21521049@gm.uit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-core (>=0.3.64,<0.4.0)",
    "gradio (>=5.34.0,<6.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "browspi", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
black = "^25.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.browspi.main:__main__"
format = "scripts.format_all:main"
job = "src.browspi.init_agent.linkedin_job_apply:__main__"
news = "src.browspi.init_agent.news:__main__"
ui = "src.browspi.ui.app:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
select = ["E", "F", "I"]  # Common rules
ignore = ["E501", "E731", "F841"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true

